# simplefin4py

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  flake.nix  pyproject.toml
.github/workflows/: constraints.txt  poetry.yml  release.yml
simplefin4py/: __init__.py  const.py  exceptions.py  model.py  simplefin.py
tests/: conftest.py  test_models.py  test_simplefin.py
tests/fixtures/: 200-with-errors.json  402.json  403.txt  account_set.json
